--- a/style.css
+++ b/style.css
@@ -2,10 +2,13 @@
 *{
     box-sizing: border-box;
 }
+
 body {
     margin: 0;
+    background: #BFBDC1;
     font-family: 'Oswald', sans-serif;
 }
+
 a {
     text-decoration: none;
     color: inherit;
@@ -39,14 +42,14 @@ header nav ul li {
     margin: 0 15px 0 15px;
 }
 
-header nav p {
-    font-family: 'Oswald', sans-serif;
-}
-
 .header-content {
     max-width: 400px;
     margin: 150px auto;
     text-align: center;
+}
+
+.header-content p {
+    margin-bottom: 35px;
 }
 
 .header-content h1{
@@ -54,7 +57,6 @@ header nav p {
 }
 
 .pacotes {
-    background: #BFBDC1;
     padding: 20px;
 
 }
