--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ header nav ul li {
     width: 100%;
     margin: auto;
     text-align: center;
-    margin: 25px;
+    margin-bottom: 25px;
 }
 
 .pacotes .cards {
